--- a/app/bikes/python-j1000.html
+++ b/app/bikes/python-j1000.html
@@ -10,5 +10,6 @@ financed-price: ¢32.500
 financed-period: 16
 cash-price: ¢750.000
 small-bike-img: /img/python-j100.png
+bike-img: /img/python-j500-big.png
 more-info-url: #
 ---
