--- a/app/bikes/python-j50.html
+++ b/app/bikes/python-j50.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 is-bike: true
-model: Python J200
+model: Python J50
 features: 
     - Lorem ipsum dolor sit amet consectetur
     - Adipisicing elit sed do eiusmod
@@ -10,5 +10,6 @@ financed-price: ¢32.500
 financed-period: 16
 cash-price: ¢750.000
 small-bike-img: /img/python-j100.png
+bike-img: /img/python-j50-big.png
 more-info-url: #
 ---
